<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imgBtnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/camera"
        android:contentDescription="@string/button_to_open_camera" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/instagram_font"
        android:text="@string/instagram"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <ImageButton
        android:id="@+id/imgBtnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/white"
        android:layout_alignParentEnd="true"
        android:src="@drawable/send"
        android:contentDescription="@string/button_to_share"/>


    <FrameLayout
        android:id="@+id/fragmentPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        android:layout_above="@+id/bottom_navigation">
    </FrameLayout>



    <!-- The bottom navigation here -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/black"
        app:menu="@menu/menu_bottom_navigation"/>

</RelativeLayout>