<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostFragment">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_above="@id/description_text_input"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            tools:srcCompat="@tools:sample/avatars" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_above="@id/btnSubmit">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="350dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="Password"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/blue"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/take_picture" />



</RelativeLayout>